# OutBound_Calling_Agent_UI

./: .gitignore  Actual_Home.py  Home.py  agent_config.py  openai_service.py  pyproject.toml  requirements.txt  system_prompts.py
old_pages/: 2_Sequential_Calling.py
pages/: 1_Admin_Dashboad.py
src/: agent_config.py  openai_service.py  validations.py
test_pages/: 1_Admin_Dashboad.py
